# zaf-amcveiculos-v4

./: .env.example  .gitignore  AJUSTES_ESTRUTURAIS_PATRICIA.md  CLAUDE.md  PLAN.md  PLANO_ADEQUACAO_TELEMETRIA_AMC.md  README.md  RELATORIO_ADEQUACAO_APLICADA.md  RELATORIO_DASHBOARD_PERFORMANCE.md  RELATORIO_PRODUCAO_PATRICIA.md  RESUMO_MELHORIAS_PATRICIA.md  docker-compose.yml  pyproject.toml
deploy/: DEPLOY_v2.md
deploy/migrations/: v2_canonical_envelope.sql
grafana/: dashboard.json
scripts/: inspect_webhook.py  smoke_agno_flow.py  smoke_anti_repeat.py  smoke_calendar.py  smoke_export.py  smoke_faq.py  smoke_ghl.py  smoke_inferencia.py  smoke_responder.py  smoke_updater.py  smoke_whisper.py
src/zoi_agent/: cache.py  config.py  llm.py  main.py  metrics.py  orchestrator.py  usage.py
src/zoi_agent/agent/: question_planner.py  responder.py  schemas.py  templates.py  updater.py
src/zoi_agent/audio/: whisper.py
src/zoi_agent/db/: __init__.py  engine.py  events.py  models.py  sessions.py
src/zoi_agent/endpoints/: abandon.py  export.py  greet.py  inbound.py
src/zoi_agent/ghl/: __init__.py  client.py  contacts.py  conversations.py  custom_values.py  workflows.py
src/zoi_agent/team/: __init__.py  inventory_expert.py  patricia.py  runner.py  (+2 more)
tests/: test_abandon.py  test_calendar.py  test_canonical_envelope.py  test_export.py  test_faq.py  test_ghl_client.py  test_greet.py  test_handoff.py  test_inbound.py  test_orchestrator.py  test_origem.py  test_photos.py  test_photos_priority.py  test_templates.py  test_terminal.py  test_updater_logic.py  test_whisper.py
(+7 files in other folders)
